chips préremplies (techno) + correction z-index back-to-top

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@ body{
     position: fixed;
     bottom: 4%;
     right: 2%;
+    z-index: 200;
 }
 
 .btn-orange {
